--- a/templates/dashboard/admin.html
+++ b/templates/dashboard/admin.html
@@ -55,6 +55,30 @@
                             Estadísticas
                         </a>
                     </div>
+
+                    <div class="nav-section">
+                        <div class="nav-section-title">Ficha de Entrada</div>
+                        <a href="{% url 'maintenance:maintenance' %}" class="nav-item" data-section="computers">
+                            <i class="fas fa-desktop"></i>
+                            Solicitud
+                        </a>
+                        {% comment %} <a href="{% url 'maintenance:maintenance' %}" class="nav-item" data-section="printers">
+                            <i class="fas fa-print"></i>
+                            Impresoras
+                        </a>
+                        <a href="{% url 'maintenance:maintenance' %}" class="nav-item" data-section="monitors">
+                            <i class="fas fa-tv"></i>
+                            Monitores
+                        </a>
+                        <a href="{% url 'maintenance:maintenance' %}" class="nav-item" data-section="projectors">
+                            <i class="fas fa-video"></i>
+                            Proyectores
+                        </a>
+                        <a href="{% url 'maintenance:maintenance' %}" class="nav-item" data-section="laptops">
+                            <i class="fas fa-laptop"></i>
+                            Portátiles
+                        </a> {% endcomment %}
+                    </div>
                     
                     {% comment %} <div class="nav-section">
                         <div class="nav-section-title">Gestión de Equipos</div>
