--- a/static/css/base.css
+++ b/static/css/base.css
@@ -88,7 +88,7 @@ body {
 
 .login-container {
     min-height: 100vh;
-    background: linear-gradient(135deg, transparent 0%, #764ba2 100%);
+    background: linear-gradient(100deg, transparent 0%, #020287 100%);
 }
 
 .login-card {
