--- a/templates/users/new_user.html
+++ b/templates/users/new_user.html
@@ -5,8 +5,8 @@
 {% block extra_css %}
 <style>
     .profile-container {
-        max-width: 50%;
-        margin: 40px auto;
+        
+        margin: auto;
         padding: 0 10px;
     }
     .profile-card {
