--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -91,7 +91,14 @@ ARCHIVO: templates/authentication/login.html
                                 </a>
                             </small>
                         </div>
-                        
+
+                        <div class="text-center mt-2 border-top">
+                            <a href="/" class="text-decoration-none">
+                                ← Volver a la página principal
+                            </a>
+                        </div>
+                                               
+
                         <!-- Sección de ayuda para verificación -->
                         <div class="text-center mt-4 pt-3 border-top">
                             <small class="text-muted">
@@ -101,7 +108,11 @@ ARCHIVO: templates/authentication/login.html
                                 </a>
                             </small>
                         </div>
+
+                        
                     </form>
+
+                    
                 </div>
             </div>
         </div>
