--- a/templates/dashboard/admin.html
+++ b/templates/dashboard/admin.html
@@ -60,6 +60,10 @@
                                 <i class="fas fa-desktop"></i>
                                 Solicitud
                             </a>
+                            <a href="{% url 'reports:historial_equipos' %}" class="nav-item" data-section="history">
+                                <i class="fas fa-history"></i>
+                                Historial de Equipos
+                            </a>
                             {% comment %} <a href="{% url 'maintenance:maintenance' %}" class="nav-item" data-section="printers">
                                 <i class="fas fa-print"></i>
                                 Impresoras
