--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,12 @@
     <title>{% block title %}Sistema de Gestión de Mantenimiento{% endblock %}</title>
     {% load static %}
     <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> {% endcomment %}
     
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" rel="stylesheet">
     
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
@@ -26,10 +28,17 @@
 
 
     {% block auth_content %}{% endblock %}
+
+
+    <footer class="footer">
+        <p>&copy; 2025 Universidad Politécnica Territorial "Jose Felix Ribas" del estado Barinas - Todos los derechos reservados</p>
+    </footer>
     
     <!-- Bootstrap 5 JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    {% comment %} <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> {% endcomment %}
     
+    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+
     {% block extra_js %}{% endblock %}
 </body>
 </html>
