--- a/templates/home/root.html
+++ b/templates/home/root.html
@@ -4,7 +4,7 @@
     {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soporte Técnico UPT - Rastrea tus Equipos</title>
+    <title>Soporte Técnico UPT - LLeva en seguimiento tus Equipos</title>
     <link rel="stylesheet" href="{% static 'css/home/root.css' %}">
     <link rel="icon" href="{% static 'favicon.ico' %}" type="image/png">   
 </head>
@@ -32,7 +32,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h2>Rastrea tus Equipos</h2>
+            <h2>LLeva en seguimiento tus Equipos</h2>
             <p>Ingresa tu número de cédula para conocer el estado en tiempo real de tus equipos en reparación</p>
             <div class="tracking-box">
                 <div class="tracking-input-wrapper">
